Update configuration for default and test databases

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,15 +12,17 @@ akka.http {
 slick.dbs {
   default = {
     url = "jdbc:sqlite:target/starterkit.db"
-    driver = org.sqlite.JDBC
-    connectionPool = disabled
-    keepAliveConnection = true
+    driver = "org.sqlite.JDBC"
+    numThreads = 1
+    connectionTimeout = 10s
+    connectionTestQuery = "SELECT 1"
   }
 
   test = {
     url = "jdbc:sqlite:target/test.db"
-    driver = org.sqlite.JDBC
-    connectionPool = disabled
-    keepAliveConnection = true
+    driver = "org.sqlite.JDBC"
+    numThreads = 1
+    connectionTimeout = 10s
+    connectionTestQuery = "SELECT 1"
   }
 }
