--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,7 +6,7 @@ akka.http {
 
 slick.dbs {
   default = {
-    url = "jdbc:sqlite:target/starterkit.db"
+    url = "jdbc:sqlite:target/default.db"
     driver = "org.sqlite.JDBC"
     numThreads = 1
     connectionTimeout = 10s
