--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -17,6 +17,8 @@
     "apollo-link-ws": "^1.0.3",
     "apollo-logger": "^0.3.0",
     "apollo-utilities": "^1.0.11",
+    "fractal-objects": "^0.9.2",
+    "i18next": "^11.2.3",
     "graphql": "^0.13.0",
     "lodash": "^4.17.4",
     "minilog": "^3.1.0",
