--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "src",
   "engines": {
-    "node": ">= 6.11.1",
+    "node": ">= 6.11.1 <= 10",
     "yarn": ">= 1.0.0"
   },
   "scripts": {
