--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -20,20 +20,27 @@
     "apollo-logger": "^0.3.0",
     "apollo-utilities": "^1.0.11",
     "fractal-objects": "^0.9.2",
-    "i18next": "^11.2.3",
     "graphql": "^0.13.0",
+    "i18next": "^11.2.3",
+    "i18next-browser-languagedetector": "^2.1.0",
     "lodash": "^4.17.4",
     "minilog": "^3.1.0",
+    "react-i18next": "^7.6.0",
     "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "subscriptions-transport-ws": "^0.9.4"
   },
   "devDependencies": {
-    "eslint": "^4.13.1",
+    "@types/i18next-browser-languagedetector": "^2.0.1",
+    "@types/react-i18next": "^7.8.3",
     "chai": "^4.1.2",
+    "eslint": "^4.13.1",
     "mocha": "^5.1.1",
     "mocha-steps": "^1.1.0",
     "mocha-webpack": "^2.0.0-beta.0"
+  },
+  "optionalDependencies": {
+    "expo": "^30.0.1"
   }
 }
