Add env variables for GitHub, LinkedIn, and Apollo Engine

--- a/packages/server/.env
+++ b/packages/server/.env
@@ -1,4 +1,7 @@
-# DB
+# Apollo Engine API Key
+APOLLO_ENGINE_API_KEY=
+
+# Database
 DB_TYPE=
 DB_HOST=
 DB_SOCKET_PATH=
@@ -11,6 +14,10 @@ DB_SSL=
 AUTH_SECRET=secret, change for production
 FACEBOOK_CLIENTID=
 FACEBOOK_CLIENTSECRET=
+GITHUB_CLIENTID=
+GITHUB_CLIENTSECRET=
+LINKEDIN_CLIENTID=
+LINKEDIN_CLIENTSECRET=
 GOOGLE_CLIENTID=
 GOOGLE_CLIENTSECRET=
 
