--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "spinjs": "^0.4.166"
   },
   "resolutions": {
+    "schedule": "0.4.0",
     "graphql": "0.13.2",
     "iterall": "^1.2.2",
     "upath": "^1.1.0"
