Update packages to babel 7

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -103,10 +103,10 @@
     "prop-types": "^15.6.0",
     "react": "16.5.0",
     "react-apollo": "^2.1.4",
-    "react-art": "^16.3.2",
+    "react-art": "16.5.0",
     "react-cookie": "^2.2.0",
     "react-debounce-input": "^3.1.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "16.5.0",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
