--- a/package.json
+++ b/package.json
@@ -76,19 +76,24 @@
     "logo": "https://opencollective.com/opencollective/logo.txt"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^10.0.1",
+    "@babel/cli": "^7.0.0-beta.54",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
+    "@babel/plugin-transform-destructuring": "^7.0.0-beta.54",
+    "@babel/plugin-transform-regenerator": "^7.0.0-beta.54",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/preset-flow": "^7.0.0-beta.54",
+    "@babel/preset-react": "^7.0.0-beta.54",
+    "@babel/register": "^7.0.0-beta.54",
+    "babel-core": "^7.0.0-0",
+    "babel-loader": "^8.0.4",
+    "babel-eslint": "^8.2.6",
     "babel-plugin-import": "^1.7.0",
     "babel-plugin-styled-components": "^1.3.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-minify": "^0.5.0-alpha.a24dd066",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-minify": "^0.5.0-alpha.5a128fd5",
     "cache-loader": "^1.2.2",
     "css-loader": "^1.0.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -101,7 +106,6 @@
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.4.9",
-    "heroku-babel-loader": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.19.0",
     "husky": "^1.1.2",
