--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -52,6 +52,9 @@
   "author": "SysGears INC",
   "license": "MIT",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "apollo-cache-inmemory": "1.2.9",
     "apollo-cache-router": "^1.1.6",
     "apollo-client": "^2.3.4",
@@ -63,9 +66,6 @@
     "apollo-logger": "^0.3.0",
     "apollo-server-express": "^2.0.0",
     "apollo-server-module-graphiql": "^1.4.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "dotenv": "^5.0.1",
