--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -69,12 +69,12 @@
     "lodash": "^4.17.4",
     "minilog": "^3.1.0",
     "prop-types": "^15.6.0",
-    "react": "16.3.1",
+    "react": "16.5.0",
     "react-apollo": "^2.1.4",
-    "react-art": "^16.3.2",
+    "react-art": "16.5.0",
     "react-cookie": "^2.2.0",
     "react-debounce-input": "^3.1.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "16.5.0",
     "react-dropzone": "^4.2.3",
     "react-ga": "^2.3.5",
     "react-helmet": "^5.2.0",
@@ -131,9 +131,9 @@
   "optionalDependencies": {
     "@expo/vector-icons": "^6.2.1",
     "antd-mobile-rn": "^2.2.1",
-    "expo": "^30.0.1",
+    "expo": "^31.0.2",
     "native-base": "^2.3.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-credit-card-input": "^0.4.1",
     "uuid": "^3.3.2",
     "react-native-elements": "^0.19.1",
@@ -146,5 +146,18 @@
   },
   "peerDependencies": {
     "spinjs": "^0.4.0"
+  },
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">1%",
+      "last 4 versions",
+      "Firefox ESR",
+      "not ie < 11"
+    ]
   }
 }
