--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -53,7 +53,7 @@
     "apollo-link-ws": "^1.0.3",
     "apollo-logger": "^0.3.0",
     "apollo-upload-client": "^8.0.0",
-    "expo": "^30.0.1",
+    "expo": "^31.0.2",
     "extract-files": "^3.1.0",
     "filesize": "^3.5.11",
     "graphql": "^0.13.0",
@@ -61,23 +61,23 @@
     "graphql-tag": "^2.6.0",
     "i18next": "^11.2.3",
     "immutability-helper": "^2.6.2",
-    "jest-expo": "^30.0.0",
+    "jest-expo": "^31.0.0",
     "lodash": "^4.17.4",
     "minilog": "^3.1.0",
     "native-base": "^2.3.5",
     "prop-types": "^15.6.0",
-    "react": "16.3.1",
+    "react": "16.5.0",
     "react-apollo": "^2.1.4",
     "react-debounce-input": "^3.1.0",
     "react-i18next": "^7.6.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^0.19.1",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-mime-types": "^2.2.1",
     "react-native-modal": "^5.4.0",
     "react-native-simple-picker": "^2.0.0",
-    "react-navigation": "^2.13.0",
+    "react-navigation": "^2.18.2",
     "react-redux": "^5.0.6",
     "redux": "^4.0.0",
     "subscriptions-transport-ws": "^0.9.4",
@@ -101,7 +101,7 @@
     "expo-file-system": "^1.0.1",
     "expo-react-native-adapter": "^1.0.1",
     "freeport-async": "^1.1.1",
-    "haul": "^1.0.0-rc.7",
+    "haul": "^1.0.0-rc.9",
     "image-size": "^0.6.2",
     "jsdom": "^11.5.1",
     "mkdirp": "^0.5.1",
@@ -109,10 +109,10 @@
     "mocha-steps": "^1.1.0",
     "mocha-webpack": "^2.0.0-beta.0",
     "react-addons-test-utils": "^16.0.0-alpha.3",
-    "react-test-renderer": "^16.2.0",
+    "react-test-renderer": "16.5.0",
     "request": "^2.83.0",
     "rimraf": "^2.6.2",
-    "ts-jest": "^23.1.4",
+    "ts-jest": "^23.10.4",
     "ws": "^5.1.1",
     "xdl": "^49.2.0"
   },
