--- a/package.json
+++ b/package.json
@@ -90,7 +90,6 @@
     "@babel/runtime": "^7.0.0",
     "@babel/register": "^7.0.0",
     "babel-core": "^7.0.0-0",
-    "babel-loader": "^8.0.4",
     "babel-eslint": "^8.2.6",
     "babel-plugin-import": "^1.7.0",
     "babel-plugin-styled-components": "^1.3.0",
@@ -107,6 +106,7 @@
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.4.9",
+    "heroku-babel-loader": "^8.0.4",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.19.0",
     "husky": "^1.1.2",
