--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean": "lerna run clean --stream",
     "exp": "yarn --cwd packages/mobile exp",
     "start": "lerna run --scope=server start --stream",
-    "jest": "jest",
+    "jest": "lerna run jest --stream",
     "tests": "lerna run tests --stream",
     "tests:watch": "lerna run tests:watch --stream",
     "test": "yarn tests && yarn lint",
@@ -158,38 +158,5 @@
     "graphql": "0.13.2",
     "iterall": "^1.2.2",
     "upath": "^1.1.0"
-  },
-  "jest": {
-    "verbose": true,
-    "preset": "jest-expo",
-    "testPathIgnorePatterns": [
-      "node_modules",
-      ".history"
-    ],
-    "testRegex": "packages/mobile/src.*/__tests__/.*\\.(js|jsx|ts|tsx)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx"
-    ],
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest",
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "modulePathIgnorePatterns": [
-      "<rootDir>/node_modules/react-native/Libraries/react-native/",
-      "<rootDir>/node_modules/react-native/jest/",
-      "<rootDir>/node_modules/haul/",
-      "<rootDir>/packages/mobile/.expo/"
-    ],
-    "globals": {
-      "__CLIENT__": true,
-      "__SERVER__": false,
-      "__TEST__": true,
-      "ts-jest": {
-        "tsConfig": "packages/mobile/tsconfig.jest.json"
-      }
-    }
   }
 }
