--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -13,8 +13,8 @@
     "exp": "cross-env NODE_ENV=production spin exp",
     "exp-login": "cross-env NODE_ENV=production spin exp login -u $EXP_USERNAME -p $EXP_PASSWORD --non-interactive",
     "exp-publish": "yarn exp-login && yarn exp -- p --non-interactive",
-    "jest": "cross-env NODE_ENV=jest PORT=7070 yarn --cwd ../.. jest",
-    "jest:watch": "cross-env NODE_ENV=jest PORT=7070 yarn --cwd ../.. jest --watch",
+    "jest": "cross-env NODE_ENV=jest PORT=7070 jest",
+    "jest:watch": "cross-env NODE_ENV=jest PORT=7070 jest --watch",
     "test": "yarn tests && yarn lint",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
@@ -118,5 +118,38 @@
   },
   "peerDependencies": {
     "spinjs": "^0.4.0"
+  },
+  "jest": {
+    "verbose": true,
+    "preset": "jest-expo",
+    "testPathIgnorePatterns": [
+      "node_modules",
+      ".history"
+    ],
+    "testRegex": "src.*/__tests__/.*\\.(js|jsx|ts|tsx)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest",
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "modulePathIgnorePatterns": [
+      "<rootDir>/node_modules/react-native/Libraries/react-native/",
+      "<rootDir>/node_modules/react-native/jest/",
+      "<rootDir>/node_modules/haul/",
+      "<rootDir>/packages/mobile/.expo/"
+    ],
+    "globals": {
+      "__CLIENT__": true,
+      "__SERVER__": false,
+      "__TEST__": true,
+      "ts-jest": {
+        "tsConfig": "tsconfig.jest.json"
+      }
+    }
   }
 }
