--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -81,6 +81,7 @@
     "react-cookie": "^2.2.0",
     "react-datepicker": "^1.5.0",
     "react-debounce-input": "^3.1.0",
+    "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "16.5.0",
     "react-dropzone": "^4.2.3",
