--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -44,6 +44,7 @@
     "@angular/core": "^7.0.3",
     "@angular/platform-browser": "^7.0.3",
     "@angular/platform-browser-dynamic": "^7.0.3",
+    "@angularclass/hmr": "^2.1.3",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.6",
     "@fortawesome/react-fontawesome": "0.0.18",
