--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "apollo-cache-inmemory": "1.2.9",
+    "apollo-cache-logger": "^1.1.1",
     "apollo-cache-router": "^1.1.6",
     "apollo-client": "^2.3.4",
     "apollo-link": "^1.0.6",
