Delete validation from common folder

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,8 +11,8 @@
     "build": "cross-env NODE_ENV=production spin build",
     "clean": "rimraf build .tmp",
     "start": "node --harmony build",
-    "tests": "cross-env NODE_ENV=test PORT=7070 spin test -t 10000 --full-trace \"src/**/*.spec.*\"",
-    "tests:watch": "cross-env NODE_ENV=test PORT=7070 spin test -t 10000 --full-trace --watch \"src/**/*.spec.*\"",
+    "tests": "cross-env NODE_ENV=test PORT=7070 spin test -t 10000 --full-trace \"../../modules/**/server-ts/**/*.spec.*\" \"src/**/*.spec.*\"",
+    "tests:watch": "cross-env NODE_ENV=test PORT=7070 spin test -t 10000 --full-trace --watch \"../../modules/**/server-ts/**/*.spec.*\" \"src/**/*.spec.*\"",
     "test": "yarn tests && yarn lint",
     "lint": "eslint --fix --ext js --ext jsx --ext json src config",
     "seed": "yarn migrate && knex seed:run",
@@ -55,6 +55,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@module/validation-common-react": "^1.0.0",
     "apollo-cache-inmemory": "1.2.9",
     "apollo-cache-router": "^1.1.6",
     "apollo-client": "^2.3.4",
