--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -49,6 +49,7 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.6",
     "@fortawesome/react-fontawesome": "0.0.18",
+    "@ngrx/store": "^6.1.2",
     "angular2-template-loader": "^0.6.2",
     "antd": "^3.10.0",
     "apollo-angular": "^1.5.0",
