--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -10,6 +10,7 @@
     "tests:watch": "cross-env NODE_ENV=test PORT=7070 spin test -t 10000 --full-trace --watch \"modules/**/*.spec.*\""
   },
   "dependencies": {
+    "@ngrx/store": "^6.1.2",
     "apollo-cache-inmemory": "1.2.9",
     "apollo-cache-logger": "^1.1.1",
     "apollo-cache-router": "^1.1.6",
