Update angular branch according to the new module first architecture

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -52,9 +52,11 @@
     "@ngrx/store": "^6.1.2",
     "angular2-template-loader": "^0.6.2",
     "@module/module-client-react": "^1.0.0",
+    "@module/module-client-angular": "^1.0.0",
     "@module/i18n-common-react": "^1.0.0",
     "@module/i18n-client-react": "^1.0.0",
     "@module/counter-client-react": "^1.0.0",
+    "@module/counter-client-angular": "^1.0.0",
     "@module/validation-common-react": "^1.0.0",
     "antd": "^3.10.0",
     "apollo-angular": "^1.5.0",
