--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "workspaces": [
     "packages/*",
     "modules/**/client-react",
+    "modules/**/client-angular",
     "modules/**/common-react",
     "modules/**/server-ts"
   ],
