--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -39,15 +39,28 @@
   "author": "SysGears INC",
   "license": "MIT",
   "dependencies": {
+    "@angular/common": "^7.0.3",
+    "@angular/compiler": "^7.0.3",
+    "@angular/core": "^7.0.3",
+    "@angular/platform-browser": "^7.0.3",
+    "@angular/platform-browser-dynamic": "^7.0.3",
+    "@angular/router": "^7.0.3",
+    "@angularclass/hmr": "^2.1.3",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.6",
     "@fortawesome/react-fontawesome": "0.0.18",
+    "@ngrx/store": "^6.1.2",
+    "angular2-template-loader": "^0.6.2",
     "@module/module-client-react": "^1.0.0",
+    "@module/module-client-angular": "^1.0.0",
     "@module/i18n-common-react": "^1.0.0",
     "@module/i18n-client-react": "^1.0.0",
     "@module/counter-client-react": "^1.0.0",
+    "@module/counter-client-angular": "^1.0.0",
     "@module/validation-common-react": "^1.0.0",
     "antd": "^3.10.0",
+    "apollo-angular": "^1.5.0",
+    "apollo-angular-link-http": "^1.4.0",
     "apollo-cache-inmemory": "1.2.9",
     "apollo-cache-router": "^1.1.6",
     "apollo-client": "^2.3.4",
@@ -60,6 +73,7 @@
     "apollo-upload-client": "^8.0.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.1",
+    "core-js": "^2.5.7",
     "error-stack-parser": "^2.0.1",
     "extract-files": "^3.1.0",
     "filesize": "^3.5.11",
@@ -94,9 +108,11 @@
     "reactstrap": "^5.0.0-beta",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
+    "rxjs": "^6.3.3",
     "sourcemapped-stacktrace": "^1.1.8",
     "styled-components": "^3.2.6",
-    "subscriptions-transport-ws": "^0.9.4"
+    "subscriptions-transport-ws": "^0.9.4",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@alienfast/i18next-loader": "^1.0.16",
@@ -139,14 +155,14 @@
     "native-base": "^2.3.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-credit-card-input": "^0.4.1",
-    "uuid": "^3.3.2",
     "react-native-elements": "^0.19.1",
     "react-native-gifted-chat": "^0.4.3",
     "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-mime-types": "^2.2.1",
     "react-native-modal": "^5.4.0",
     "react-native-simple-picker": "^2.0.0",
     "react-navigation": "^2.13.0",
-    "react-native-mime-types": "^2.2.1"
+    "uuid": "^3.3.2"
   },
   "peerDependencies": {
     "spinjs": "^0.4.0"
