--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -26,10 +26,14 @@ slick.dbs {
 }
 
 email {
-  host = "smtp.ethereal.email"
-  port = 587
-  user = "zapaluzwfdsq4j7d@ethereal.email"
-  password = "2aSXhzZyYc1TeCXPzS"
+  service = "ethereal"
+
+  ethereal {
+    host = "smtp.ethereal.email"
+    port = 587
+    user = "zapaluzwfdsq4j7d@ethereal.email"
+    password = "2aSXhzZyYc1TeCXPzS"
+  }
 }
 
 jwt {
