Add counter common module. Update angular counter

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "packages/*",
     "modules/**/client-react",
     "modules/**/client-angular",
+    "modules/**/common",
     "modules/**/common-react",
     "modules/**/server-ts"
   ],
