--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -57,6 +57,7 @@
     "@module/i18n-client-react": "^1.0.0",
     "@module/counter-client-react": "^1.0.0",
     "@module/counter-client-angular": "^1.0.0",
+    "@module/counter-common": "^1.0.0",
     "@module/validation-common-react": "^1.0.0",
     "antd": "^3.10.0",
     "apollo-angular": "^1.5.0",
