--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -33,8 +33,8 @@
     "universal",
     "starter",
     "graphql",
-    "react",
-    "redux"
+    "angular",
+    "rxjs"
   ],
   "author": "SysGears INC",
   "license": "MIT",
@@ -59,7 +59,6 @@
     "@module/counter-client-angular": "^1.0.0",
     "@module/counter-common": "^1.0.0",
     "@module/validation-common-react": "^1.0.0",
-    "antd": "^3.10.0",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.4.0",
     "apollo-cache-inmemory": "1.2.9",
@@ -73,12 +72,10 @@
     "apollo-logger": "^0.3.0",
     "apollo-upload-client": "^8.0.0",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.1.1",
     "core-js": "^2.5.7",
     "error-stack-parser": "^2.0.1",
     "extract-files": "^3.1.0",
     "filesize": "^3.5.11",
-    "formik": "^1.0.2",
     "graphql": "^0.13.0",
     "graphql-iso-date": "^3.5.0",
     "graphql-tag": "^2.6.0",
@@ -86,32 +83,9 @@
     "i18next": "^11.2.3",
     "immutability-helper": "^2.6.2",
     "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.4",
     "minilog": "^3.1.0",
-    "prop-types": "^15.6.0",
-    "react": "16.5.0",
-    "react-apollo": "^2.1.4",
-    "react-art": "16.5.0",
-    "react-cookie": "^2.2.0",
-    "react-debounce-input": "^3.1.0",
-    "react-dom": "16.5.0",
-    "react-dropzone": "^4.2.3",
-    "react-ga": "^2.3.5",
-    "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.1.2",
-    "react-i18next": "^7.6.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.8",
-    "react-stripe-elements": "^1.2.1",
-    "react-transition-group": "^2.3.0-beta.0",
-    "reactstrap": "^5.0.0-beta",
-    "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.2",
     "rxjs": "^6.3.3",
     "sourcemapped-stacktrace": "^1.1.8",
-    "styled-components": "^3.2.6",
     "subscriptions-transport-ws": "^0.9.4",
     "zone.js": "^0.8.26"
   },
@@ -120,15 +94,6 @@
     "@types/chai": "^4.1.4",
     "@types/lodash": "^4.14.112",
     "@types/mocha": "^5.2.5",
-    "@types/react": "^16.4.6",
-    "@types/react-dom": "^16.0.5",
-    "@types/react-helmet": "^5.0.6",
-    "@types/react-native": "^0.55.7",
-    "@types/react-navigation": "^2.0.24",
-    "@types/react-redux": "^6.0.4",
-    "@types/react-router-dom": "^4.2.7",
-    "@types/react-router-redux": "^5.0.16",
-    "@types/react-stripe-elements": "^1.1.7",
     "@types/webpack-env": "^1.13.6",
     "apollo-utilities": "^1.0.3",
     "autoprefixer": "^8.3.0",
@@ -143,26 +108,10 @@
     "mocha": "^5.1.1",
     "mocha-steps": "^1.1.0",
     "mocha-webpack": "^2.0.0-beta.0",
-    "react-addons-test-utils": "^16.0.0-alpha.3",
-    "react-test-renderer": "^16.2.0",
-    "react-testing-library": "^3.0.2",
     "request": "^2.83.0",
     "rimraf": "^2.6.2"
   },
   "optionalDependencies": {
-    "@expo/vector-icons": "^6.2.1",
-    "antd-mobile-rn": "^2.2.1",
-    "expo": "^31.0.2",
-    "native-base": "^2.3.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
-    "react-native-credit-card-input": "^0.4.1",
-    "react-native-elements": "^0.19.1",
-    "react-native-gifted-chat": "^0.4.3",
-    "react-native-keyboard-spacer": "^0.4.1",
-    "react-native-mime-types": "^2.2.1",
-    "react-native-modal": "^5.4.0",
-    "react-native-simple-picker": "^2.0.0",
-    "react-navigation": "^2.13.0",
     "uuid": "^3.3.2"
   },
   "peerDependencies": {
