--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production spin build",
     "clean": "rimraf build .tmp",
-    "tests": "cross-env NODE_ENV=test PORT=7070 spin test -t 10000 --full-trace \"../../modules/**/client-react/**/*.spec.*\" \"src/**/*.spec.*\"",
-    "tests:watch": "cross-env NODE_ENV=test PORT=7070 spin test -t 10000 --full-trace --watch \"../../modules/**/client-react/**/*.spec.*\" \"src/**/*.spec.*\"",
+    "tests": "cross-env NODE_ENV=test PORT=7070 spin test -t 10000 --full-trace \"../../modules/**/client-angular/**/*.spec.*\" \"src/**/*.spec.*\"",
+    "tests:watch": "cross-env NODE_ENV=test PORT=7070 spin test -t 10000 --full-trace --watch \"../../modules/**/client-angular/**/*.spec.*\" \"src/**/*.spec.*\"",
     "test": "yarn tests && yarn lint",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
@@ -49,16 +49,16 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.6",
     "@fortawesome/react-fontawesome": "0.0.18",
+    "@module/counter-client-angular": "^1.0.0",
+    "@module/counter-client-react": "^1.0.0",
+    "@module/counter-common": "^1.0.0",
+    "@module/i18n-client-react": "^1.0.0",
+    "@module/i18n-common-react": "^1.0.0",
+    "@module/module-client-angular": "^1.0.0",
+    "@module/module-client-react": "^1.0.0",
+    "@module/validation-common-react": "^1.0.0",
     "@ngrx/store": "^6.1.2",
     "angular2-template-loader": "^0.6.2",
-    "@module/module-client-react": "^1.0.0",
-    "@module/module-client-angular": "^1.0.0",
-    "@module/i18n-common-react": "^1.0.0",
-    "@module/i18n-client-react": "^1.0.0",
-    "@module/counter-client-react": "^1.0.0",
-    "@module/counter-client-angular": "^1.0.0",
-    "@module/counter-common": "^1.0.0",
-    "@module/validation-common-react": "^1.0.0",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.4.0",
     "apollo-cache-inmemory": "1.2.9",
@@ -71,7 +71,6 @@
     "apollo-link-ws": "^1.0.3",
     "apollo-logger": "^0.3.0",
     "apollo-upload-client": "^8.0.0",
-    "babel-polyfill": "^6.26.0",
     "core-js": "^2.5.7",
     "error-stack-parser": "^2.0.1",
     "extract-files": "^3.1.0",
@@ -81,8 +80,8 @@
     "graphql-tag": "^2.6.0",
     "history": "^4.7.2",
     "i18next": "^11.2.3",
-    "immutability-helper": "^2.6.2",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
     "minilog": "^3.1.0",
     "rxjs": "^6.3.3",
     "sourcemapped-stacktrace": "^1.1.8",
@@ -92,6 +91,7 @@
   "devDependencies": {
     "@alienfast/i18next-loader": "^1.0.16",
     "@types/chai": "^4.1.4",
+    "@types/lodash": "^4.14.118",
     "@types/mocha": "^5.2.5",
     "@types/webpack-env": "^1.13.6",
     "apollo-utilities": "^1.0.3",
