Implement mailing module [Scala]   (#914)
Implement mailing module

--- a/packages/server-scala/src/main/resources/application.conf
+++ b/packages/server-scala/src/main/resources/application.conf
@@ -26,10 +26,12 @@ slick.dbs {
 }
 
 email {
-  host = "smtp.ethereal.email"
-  port = 587
-  user = "zapaluzwfdsq4j7d@ethereal.email"
-  password = "2aSXhzZyYc1TeCXPzS"
+  ethereal {
+    host = "smtp.ethereal.email"
+    port = 587
+    user = "zapaluzwfdsq4j7d@ethereal.email"
+    password = "2aSXhzZyYc1TeCXPzS"
+  }
 }
 
 jwt {
