--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -17,8 +17,7 @@
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
     "lint": "yarn eslint && yarn tslint",
     "watch": "spin watch",
-    "heroku-postbuild": "yarn build",
-    "cli": "node ../../tools/cli"
+    "heroku-postbuild": "yarn build"
   },
   "repository": {
     "type": "git",
@@ -46,17 +45,9 @@
     "@angular/platform-browser-dynamic": "^7.0.3",
     "@angular/router": "^7.0.3",
     "@angularclass/hmr": "^2.1.3",
-    "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-free-brands": "^5.0.6",
-    "@fortawesome/react-fontawesome": "0.0.18",
     "@module/counter-client-angular": "^1.0.0",
-    "@module/counter-client-react": "^1.0.0",
     "@module/counter-common": "^1.0.0",
-    "@module/i18n-client-react": "^1.0.0",
-    "@module/i18n-common-react": "^1.0.0",
     "@module/module-client-angular": "^1.0.0",
-    "@module/module-client-react": "^1.0.0",
-    "@module/validation-common-react": "^1.0.0",
     "@ngrx/store": "^6.1.2",
     "angular2-template-loader": "^0.6.2",
     "apollo-angular": "^1.5.0",
@@ -71,46 +62,27 @@
     "apollo-link-ws": "^1.0.3",
     "apollo-logger": "^0.3.0",
     "apollo-upload-client": "^8.0.0",
-    "core-js": "^2.5.7",
-    "error-stack-parser": "^2.0.1",
-    "extract-files": "^3.1.0",
-    "filesize": "^3.5.11",
     "graphql": "^0.13.0",
-    "graphql-iso-date": "^3.5.0",
-    "graphql-tag": "^2.6.0",
-    "history": "^4.7.2",
-    "i18next": "^11.2.3",
-    "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.11",
     "minilog": "^3.1.0",
     "rxjs": "^6.3.3",
-    "sourcemapped-stacktrace": "^1.1.8",
     "subscriptions-transport-ws": "^0.9.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@alienfast/i18next-loader": "^1.0.16",
     "@types/chai": "^4.1.4",
     "@types/lodash": "^4.14.118",
     "@types/mocha": "^5.2.5",
     "@types/webpack-env": "^1.13.6",
-    "apollo-utilities": "^1.0.3",
     "autoprefixer": "^8.3.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cross-env": "^5.1.1",
     "eslint": "^4.13.1",
     "graphql-tools": "^2.13.0",
-    "jsdom": "^11.5.1",
-    "mkdirp": "^0.5.1",
     "mocha": "^5.1.1",
     "mocha-steps": "^1.1.0",
     "mocha-webpack": "^2.0.0-beta.0",
-    "request": "^2.83.0",
     "rimraf": "^2.6.2"
-  },
-  "optionalDependencies": {
-    "uuid": "^3.3.2"
   },
   "peerDependencies": {
     "spinjs": "^0.4.0"
