--- a/tools/templates/module/client-react/package.json
+++ b/tools/templates/module/client-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@module/$module$-client-react",
+  "name": "@module/$-module$-client-react",
   "version": "1.0.0",
   "private": true
 }
