Add 'akka-http-cors' configuration

--- a/packages/server-scala/src/main/resources/application.conf
+++ b/packages/server-scala/src/main/resources/application.conf
@@ -7,6 +7,10 @@ akka.http {
   }
 }
 
+akka-http-cors {
+  allowed-origins = "*"
+}
+
 slick.dbs {
   default = {
     url = "jdbc:sqlite:target/default.db"
