--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -44,6 +44,7 @@
     "@fortawesome/react-fontawesome": "0.0.18",
     "@module/contact-client-react": "^1.0.0",
     "@module/counter-client-react": "^1.0.0",
+    "@module/chat-client-react": "^1.0.0",
     "@module/i18n-client-react": "^1.0.0",
     "@module/i18n-common-react": "^1.0.0",
     "@module/module-client-react": "^1.0.0",
@@ -140,14 +141,14 @@
     "native-base": "^2.3.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-credit-card-input": "^0.4.1",
+    "uuid": "^3.3.2",
     "react-native-elements": "^0.19.1",
     "react-native-gifted-chat": "^0.4.3",
     "react-native-keyboard-spacer": "^0.4.1",
-    "react-native-mime-types": "^2.2.1",
     "react-native-modal": "^5.4.0",
     "react-native-simple-picker": "^2.0.0",
     "react-navigation": "^2.13.0",
-    "uuid": "^3.3.2"
+    "react-native-mime-types": "^2.2.1"
   },
   "peerDependencies": {
     "spinjs": "^0.4.0"
