--- a/package.json
+++ b/package.json
@@ -68,9 +68,10 @@
   "workspaces": [
     "packages/*",
     "modules/**/client-react",
+    "modules/**/client-angular",
+    "modules/**/common",
     "modules/**/common-react",
-    "modules/**/server-ts",
-    "modules/**/common"
+    "modules/**/server-ts"
   ],
   "greenkeeper": {
     "ignore": [
