Add the 'MailConfig' class

--- a/modules/core/server-scala/src/main/resources/application.conf
+++ b/modules/core/server-scala/src/main/resources/application.conf
@@ -34,6 +34,7 @@ slick.dbs {
 }
 
 email {
+  address = "zapaluzwfdsq4j7d@ethereal.email"
   ethereal {
     host = "smtp.ethereal.email"
     port = 587
