--- a/modules/core/server-scala/src/main/resources/application.conf
+++ b/modules/core/server-scala/src/main/resources/application.conf
@@ -13,19 +13,25 @@ akka-http-cors {
 
 slick.dbs {
   default = {
-    url = "jdbc:sqlite:target/default.db"
-    driver = "org.sqlite.JDBC"
-    numThreads = 1
-    connectionTimeout = 10s
-    connectionTestQuery = "SELECT 1"
+    profile = "slick.jdbc.SQLiteProfile$"
+    db {
+      url = "jdbc:sqlite:target/default.db"
+      driver = "org.sqlite.JDBC"
+      numThreads = 1
+      connectionTimeout = 10s
+      connectionTestQuery = "SELECT 1"
+    }
   }
 
   test = {
-    url = "jdbc:sqlite:target/test.db"
-    driver = "org.sqlite.JDBC"
-    numThreads = 1
-    connectionTimeout = 10s
-    connectionTestQuery = "SELECT 1"
+    profile = "slick.jdbc.SQLiteProfile$"
+    db {
+      url = "jdbc:sqlite:target/test.db"
+      driver = "org.sqlite.JDBC"
+      numThreads = 1
+      connectionTimeout = 10s
+      connectionTestQuery = "SELECT 1"
+    }
   }
 }
 
