Move 'counter' related functionality from 'core' sbt module to a separate sbt module

--- a/packages/server-scala/src/main/resources/application.conf
+++ b/packages/server-scala/src/main/resources/application.conf
@@ -1,4 +1,5 @@
 loadPaths = [
   "../../modules/upload/server-scala",
-  "../../modules/user/server-scala"
+  "../../modules/user/server-scala",
+  "../../modules/counter/server-scala"
 ]
