Move 'payments' module codebase to match the new folder structure

--- a/packages/server-scala/src/main/resources/application.conf
+++ b/packages/server-scala/src/main/resources/application.conf
@@ -1,5 +1,6 @@
 loadPaths = [
   "../../modules/upload/server-scala",
   "../../modules/user/server-scala",
-  "../../modules/pagination/server-scala"
+  "../../modules/pagination/server-scala",
+  "../../modules/payments/server-scala"
 ]
