Move 'mailer' module related functionality from 'core' sbt project into a separate sbt project

--- a/packages/server-scala/src/main/resources/application.conf
+++ b/packages/server-scala/src/main/resources/application.conf
@@ -1,5 +1,7 @@
 loadPaths = [
   "../../modules/upload/server-scala",
   "../../modules/user/server-scala",
-  "../../modules/counter/server-scala"
+  "../../modules/counter/server-scala",
+  "../../modules/contact/server-scala",
+  "../../modules/mailer/server-scala"
 ]
