--- a/modules/contact/server-scala/src/test/resources/application.conf
+++ b/modules/contact/server-scala/src/test/resources/application.conf
@@ -1,1 +1,4 @@
-loadPaths = ["../../modules/contact/server-scala"]
+loadPaths = [
+  "../../modules/contact/server-scala",
+  "../../modules/mailer/server-scala"
+]
