Update existing modules location [scala] (#934)
Update existing modules location

--- a/modules/user/server-scala/src/test/resources/application.conf
+++ b/modules/user/server-scala/src/test/resources/application.conf
@@ -1,4 +1,7 @@
-loadPaths = ["../../modules/user/server-scala"]
+loadPaths = [
+  "../../modules/user/server-scala",
+  "../../modules/mailer/server-scala"
+]
 
 user {
   auth {
