--- a/modules/counter/server-scala/src/test/resources/application.conf
+++ b/modules/counter/server-scala/src/test/resources/application.conf
@@ -1,1 +1,15 @@
 loadPaths = ["../../modules/counter/server-scala"]
+
+slick.dbs {
+  default = {
+    profile = "slick.jdbc.SQLiteProfile$"
+    db {
+      url = "jdbc:sqlite:target/test-counter.db"
+      driver = "org.sqlite.JDBC"
+      numThreads = 1
+      queueSize=1000
+      connectionTimeout = 10s
+      connectionTestQuery = "SELECT 1"
+    }
+  }
+}
