--- a/modules/user/server-scala/src/test/resources/application.conf
+++ b/modules/user/server-scala/src/test/resources/application.conf
@@ -8,3 +8,17 @@ user {
     skipConfirmation = true
   }
 }
+
+slick.dbs {
+  default = {
+    profile = "slick.jdbc.SQLiteProfile$"
+    db {
+      url = "jdbc:sqlite:target/test-user.db"
+      driver = "org.sqlite.JDBC"
+      numThreads = 1
+      queueSize=1000
+      connectionTimeout = 10s
+      connectionTestQuery = "SELECT 1"
+    }
+  }
+}
