--- a/packages/client-angular/tsconfig.json
+++ b/packages/client-angular/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "include": [
-    "../../**/*.d.ts",
+    "../../**/typings.d.ts",
     "**/*.ts",
     "**/*.tsx"
   ]
