add configuration for in-memory sqlite test database

--- a/modules/user/server-scala/src/test/resources/application.conf
+++ b/modules/user/server-scala/src/test/resources/application.conf
@@ -13,7 +13,7 @@ slick.dbs {
   default = {
     profile = "slick.jdbc.SQLiteProfile$"
     db {
-      url = "jdbc:sqlite:target/test-user.db"
+      url = "jdbc:sqlite::memory:"
       driver = "org.sqlite.JDBC"
       numThreads = 1
       queueSize=1000
