--- a/modules/contact/server-scala/src/test/resources/application.conf
+++ b/modules/contact/server-scala/src/test/resources/application.conf
@@ -7,7 +7,7 @@ slick.dbs {
   default = {
     profile = "slick.jdbc.SQLiteProfile$"
     db {
-      url = "jdbc:sqlite:target/test-contact.db"
+      url = "jdbc:sqlite::memory:"
       driver = "org.sqlite.JDBC"
       conntectionPool= "enabled"
       numThreads = 1
