--- a/modules/pagination/server-scala/src/test/resources/application.conf
+++ b/modules/pagination/server-scala/src/test/resources/application.conf
@@ -4,7 +4,7 @@ slick.dbs {
   default = {
     profile = "slick.jdbc.SQLiteProfile$"
     db {
-      url = "jdbc:sqlite:target/test-pagination.db"
+      url = "jdbc:sqlite::memory:"
       driver = "org.sqlite.JDBC"
       numThreads = 1
       queueSize=1000
