--- a/modules/user/server-scala/src/test/resources/application.conf
+++ b/modules/user/server-scala/src/test/resources/application.conf
@@ -11,14 +11,10 @@ user {
 
 slick.dbs {
   default = {
-    profile = "slick.jdbc.SQLiteProfile$"
+    profile = "slick.jdbc.H2Profile$"
     db {
-      url = "jdbc:sqlite::memory:"
-      driver = "org.sqlite.JDBC"
-      numThreads = 1
-      queueSize=1000
-      connectionTimeout = 10s
-      connectionTestQuery = "SELECT 1"
+      url = "jdbc:h2:mem:test;DB_CLOSE_DELAY=-1"
+      driver = "org.h2.Driver"
     }
   }
 }
