Add google OAuth2 configuration to the application.conf file

--- a/modules/user/server-scala/src/main/resources/application.conf
+++ b/modules/user/server-scala/src/main/resources/application.conf
@@ -2,5 +2,13 @@ user {
   auth {
     skipConfirmation = false
     confirmRegistrationRoute = "/confirm/"
+
+    google {
+      clientId = ""
+      clientSecret = ""
+      stateSeed = 0
+      scope = ""
+      callback = ""
+    }
   }
 }
