--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -48,6 +48,7 @@
     "@module/counter-client-react": "^1.0.0",
     "@module/i18n-client-react": "^1.0.0",
     "@module/i18n-common-react": "^1.0.0",
+    "@module/payments-client-react": "^1.0.0",
     "@module/module-client-react": "^1.0.0",
     "@module/validation-common-react": "^1.0.0",
     "antd": "^3.10.0",
