Add Post module to server resources.

--- a/packages/server-scala/src/main/resources/application.conf
+++ b/packages/server-scala/src/main/resources/application.conf
@@ -5,4 +5,5 @@ loadPaths = [
   "../../modules/contact/server-scala",
   "../../modules/mailer/server-scala",
   "../../modules/pagination/server-scala"
+  "../../modules/post/server-scala"
 ]
