--- a/modules/contact/server-scala/src/test/resources/application.conf
+++ b/modules/contact/server-scala/src/test/resources/application.conf
@@ -5,15 +5,10 @@ loadPaths = [
 
 slick.dbs {
   default = {
-    profile = "slick.jdbc.SQLiteProfile$"
+    profile = "slick.jdbc.H2Profile$"
     db {
-      url = "jdbc:sqlite:target/test-contact.db"
-      driver = "org.sqlite.JDBC"
-      conntectionPool= "enabled"
-      numThreads = 1
-      queueSize=1000
-      connectionTimeout = 10s
-      connectionTestQuery = "SELECT 1"
+      url = "jdbc:h2:mem:test;DB_CLOSE_DELAY=-1"
+      driver = "org.h2.Driver"
     }
   }
 }
