Update the 'stateSeed' parameter to 'state' with a string type

--- a/modules/user/server-scala/src/main/resources/application.conf
+++ b/modules/user/server-scala/src/main/resources/application.conf
@@ -6,7 +6,7 @@ user {
     google {
       clientId = ""
       clientSecret = ""
-      stateSeed = 0
+      state = ""
       scope = ""
       callback = ""
     }
