Add facebook OAuth2 configuration

--- a/modules/user/server-scala/src/main/resources/application.conf
+++ b/modules/user/server-scala/src/main/resources/application.conf
@@ -10,5 +10,13 @@ user {
       scope = ""
       callback = ""
     }
+
+    facebook {
+      clientId = ""
+      clientSecret = ""
+      state = ""
+      scope = ""
+      callback = ""
+    }
   }
 }
