Add configuration for github OAuth2 api

--- a/modules/user/server-scala/src/main/resources/application.conf
+++ b/modules/user/server-scala/src/main/resources/application.conf
@@ -18,5 +18,13 @@ user {
       scope = ""
       callback = ""
     }
+
+    github {
+      clientId = ""
+      clientSecret = ""
+      state = ""
+      scope = ""
+      callback = ""
+    }
   }
 }
