Add linkedin OAuth2 configuration

--- a/modules/user/server-scala/src/main/resources/application.conf
+++ b/modules/user/server-scala/src/main/resources/application.conf
@@ -26,5 +26,13 @@ user {
       scope = ""
       callback = ""
     }
+
+    linkedin {
+      clientId = ""
+      clientSecret = ""
+      state = ""
+      scope = ""
+      callback = ""
+    }
   }
 }
