Split migrations and seeds into modules.

--- a/modules/core/common/package.json
+++ b/modules/core/common/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@module/core-common",
   "version": "1.0.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "lodash": "^4.17.11"
+  }
 }
