Add module reports

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -50,6 +50,7 @@
     "@module/i18n-common-react": "^1.0.0",
     "@module/module-client-react": "^1.0.0",
     "@module/payments-client-react": "^1.0.0",
+    "@module/reports-client-react": "^1.0.0",
     "@module/validation-common-react": "^1.0.0",
     "antd": "^3.10.0",
     "apollo-cache-inmemory": "1.2.9",
@@ -94,6 +95,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "react-stripe-elements": "^1.2.1",
+    "react-to-print": "^2.0.0-alpha-6",
     "react-transition-group": "^2.3.0-beta.0",
     "reactstrap": "^5.0.0-beta",
     "redux": "^4.0.0",
