Create Waiting page for email confirmation

--- a/packages/server/.env
+++ b/packages/server/.env
@@ -22,10 +22,10 @@ GOOGLE_CLIENTID=
 GOOGLE_CLIENTSECRET=
 
 # Email
-EMAIL_HOST=smtp.ethereal.email
+EMAIL_HOST=mailbox.sysgears.com
 EMAIL_PORT=587
-EMAIL_USER=olgv7abv3lcmipb7@ethereal.email
-EMAIL_PASSWORD=VTKxTbK7RPFNBjQwp9
+EMAIL_USER=isakov.ivan@sysgears.com
+EMAIL_PASSWORD=vANY27122008
 
 # Stripe
 STRIPE_SECRET_KEY=
