- Update seed table - Add ServerExportPDF

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -50,8 +50,8 @@
     "@module/i18n-common-react": "^1.0.0",
     "@module/module-client-react": "^1.0.0",
     "@module/payments-client-react": "^1.0.0",
-    "@module/validation-common-react": "^1.0.0",
     "@module/reports-client-react": "^1.0.0",
+    "@module/validation-common-react": "^1.0.0",
     "antd": "^3.10.0",
     "apollo-cache-inmemory": "1.2.9",
     "apollo-cache-router": "^1.1.6",
@@ -78,6 +78,7 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "minilog": "^3.1.0",
+    "pdfmake": "^0.1.40",
     "prop-types": "^15.6.0",
     "react": "16.5.0",
     "react-apollo": "^2.3.1",
