Add style to SSR, change Counter page

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -39,10 +39,10 @@
   "author": "SysGears INC",
   "license": "MIT",
   "dependencies": {
-    "@material-ui/core": "^3.8.3",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.6",
     "@fortawesome/react-fontawesome": "0.0.18",
+    "@material-ui/core": "^3.8.3",
     "@module/chat-client-react": "^1.0.0",
     "@module/contact-client-react": "^1.0.0",
     "@module/core-client-react": "^1.0.0",
@@ -75,6 +75,7 @@
     "history": "^4.7.2",
     "i18next": "^11.2.3",
     "immutability-helper": "^2.6.2",
+    "jss": "^9.8.7",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "minilog": "^3.1.0",
@@ -90,6 +91,7 @@
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.1.2",
     "react-i18next": "^7.6.0",
+    "react-jss": "^8.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
