--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -60,6 +60,7 @@
     "@module/core-common": "^1.0.0",
     "@module/database-server-ts": "^1.0.0",
     "@module/testing-server-ts": "^1.0.0",
+    "@types/react-jss": "^8.6.0",
     "apollo-cache-inmemory": "1.2.9",
     "apollo-cache-router": "^1.1.6",
     "apollo-client": "^2.4.7",
@@ -112,6 +113,7 @@
     "react-debounce-input": "^3.1.0",
     "react-dom": "16.5.0",
     "react-helmet": "^5.2.0",
+    "react-jss": "^8.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-stripe-elements": "^1.2.1",
