--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "modules/**/client-react",
     "modules/**/client-react-native",
     "modules/**/client-angular",
+    "modules/**/client-vue",
     "modules/**/common",
     "modules/**/common-react",
     "modules/**/server-ts"
@@ -104,6 +105,7 @@
     "babel-plugin-import": "^1.7.0",
     "babel-plugin-styled-components": "^1.3.0",
     "babel-preset-minify": "^0.5.0-alpha.5a128fd5",
+    "babel-preset-vue": "^2.0.2",
     "cache-loader": "^1.2.2",
     "css-loader": "^1.0.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -143,6 +145,11 @@
     "tslint-plugin-prettier": "^2.0.0",
     "typescript": "^2.9.2",
     "url-loader": "^1.0.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "vue-loader": "14.2.2",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.22",
     "wait-on": "^3.0.1",
     "webpack": "^4.25.1",
     "webpack-dev-middleware": "^3.1.3",
