Add Vue-Apollo package

--- a/packages/client-vue/package.json
+++ b/packages/client-vue/package.json
@@ -42,10 +42,10 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.6",
     "@fortawesome/react-fontawesome": "0.0.18",
-    "@module/module-common": "^1.0.0",
-    "@module/module-client-vue": "^1.0.0",
     "@module/core-client-vue": "^1.0.0",
     "@module/counter-client-vue": "^1.0.0",
+    "@module/module-client-vue": "^1.0.0",
+    "@module/module-common": "^1.0.0",
     "antd": "^3.10.0",
     "apollo-cache-inmemory": "1.2.9",
     "apollo-cache-router": "^1.1.6",
@@ -76,6 +76,7 @@
     "sourcemapped-stacktrace": "^1.1.8",
     "subscriptions-transport-ws": "^0.9.4",
     "vue": "^2.5.22",
+    "vue-apollo": "^3.0.0-beta.27",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   },
